--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.33.1",
+    "react-loader-spinner": "^5.1.5",
     "react-query": "^3.39.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
