--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,15 +6,37 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - main
+# jobs:
+#   build_and_deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - run: npm ci && npm run build
+#       - uses: FirebaseExtended/action-hosting-deploy@v0
+#         with:
+#           repoToken: '${{ secrets.GITHUB_TOKEN }}'
+#           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FILMBASE_5265D }}'
+#           channelId: live
+#           projectId: filmbase-5265d
+#       - name: Create .env file
+#       - run: echo "${{ secrets.ENV_PROD }}" > .env
 jobs:
-  build_and_deploy:
-    runs-on: ubuntu-latest
+  deploy:
+    name: Build and Deploy
+    runs-on: macos-latest 
     steps:
-      - uses: actions/checkout@v2
-      - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FILMBASE_5265D }}'
-          channelId: live
-          projectId: filmbase-5265d
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Install firebase-tools
+        run: yarn global add firebase-tools
+      - name: Create .env file
+        run: echo "${{ secrets.ENV_PROD }}" > .env
+      - name: Install dependencies
+        run: yarn --network-timeout 100000
+      - name: Build app
+        run: yarn generate
+      - name: Deploy
+        run: firebase deploy --project $FIREBASE_PROJECT_ID_PROD --token $FIREBASE_TOKEN
+    env:
+      FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      FIREBASE_PROJECT_ID_PROD: ${{ secrets.FIREBASE_PROJECT_ID_PROD }}
